--- a/views/profiles/show.ejs
+++ b/views/profiles/show.ejs
@@ -13,7 +13,7 @@
 <% if (authorisedUser) { %>
     <p><a href="/profiles/<%= user.id %>/edit">Edit Profile</a></p>
     <form action="/profiles/<%= user.id %>/delete" method="POST" style="display:inline;">
-        <button type="submit">Delete Profile</button>
+        <button type="submit" onclick="return confirm('Are you sure?')">Delete Profile</button>
     </form>
 <% } %>
 
