--- a/views/articles/index.ejs
+++ b/views/articles/index.ejs
@@ -1,5 +1,5 @@
 <h1>All Articles</h1>
-<a href="/articles/create">Create New Article</a>
+<a href="/articles/create">Create New Article Here</a>
 <ul>
     <% articles.forEach(article => { %>
         <li>
