--- a/views/articles/index.ejs
+++ b/views/articles/index.ejs
@@ -1,9 +1,9 @@
 <h1>All Articles</h1>
 <a href="/articles/create">Create New Article Here</a>
 <ul>
-    <% articles.forEach(article => { %>
+    <% articles?.forEach(article => { %>
         <li>
-            <a href="/articles/<%= article.id %>"><%= article.title %></a> [by <%= article.User.username %>]
+            <a href="/articles/<%= article?.id %>"><%= article?.title %></a> [by <%= article?.User?.username %>]
         </li>
     <% }) %>
 </ul>
