--- a/views/articles/create.ejs
+++ b/views/articles/create.ejs
@@ -1,4 +1,4 @@
-<h1>Create New Article</h1>
+<!-- <h1>Create New Article</h1>
 <form action="/articles/create" method="POST">
     <label for="title">Title:</label>
     <input type="text" name="title" placeholder="Title" required>
@@ -7,4 +7,27 @@
     <label for="category">Category:</label>
     <input type="text" name="category" placeholder="Category">
     <button type="submit">Submit</button>
-</form>
+</form> -->
+
+<div class="col-md-4">
+    <h3>Create New Article</h3>
+    <form action="/articles/create" method="POST" enctype="multipart/form-data">
+        <div class="mb-1">
+            <label class="form-label">Title</label>
+            <input type="text" name="title" class="form-control" required>
+        </div>
+        <div class="mb-1">
+            <label class="form-label">Content</label>
+            <textarea name="content" class="form-control" rows="5" required></textarea>
+        </div>
+        <label for="category">Category:</label>
+        <input type="text" name="category" placeholder="Category">
+
+        <div class="mb-1">
+            <label class="form-label">Images (Max 2)</label>
+            <input type="file" name="images" class="form-control" multiple accept="image/*">
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+</div>
+</div>
